<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.left4candy.cryptoexchange.OptionsActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?android:attr/homeAsUpIndicator"
        android:onClick="goMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button3"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/ic_action_name"
        android:elevation="10dp"
        android:onClick="addButtonClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="43dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="84dp"
        android:background="@drawable/ic_action_delete"
        android:elevation="10dp"
        android:onClick="deleteButtonClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="75dp"
        android:hint="@string/nameinput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/valueText"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="75dp"
        android:hint="@string/valueinput"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toEndOf="@+id/nameText"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <CheckBox
        android:id="@+id/cryptoCheck"
        android:layout_width="80dp"
        android:layout_height="21dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="75dp"
        android:buttonTint="@color/colorPrimaryDark"
        android:checked="true"
        android:text="@string/crypto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/valueText"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <CheckBox
        android:id="@+id/fiatCheck"
        android:layout_width="80dp"
        android:layout_height="19dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:buttonTint="@color/colorPrimaryDark"
        android:checked="false"
        android:text="@string/fiat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/valueText"
        app:layout_constraintTop_toBottomOf="@+id/cryptoCheck" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="144dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:elevation="0dp"
        android:text="@string/currencies"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="9dp"
        android:elevation="10dp"
        android:text="@string/id"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/currencyList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/nameinput"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/currencyList"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/nameText" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/valueinput"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/currencyList"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/valueText" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/type"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/currencyList"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/valueText" />

    <ListView
        android:id="@+id/currencyList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:background="@android:color/background_light"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

</android.support.constraint.ConstraintLayout>
