<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.left4candy.cryptoexchange.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/convertButton"
        android:layout_width="221dp"
        android:layout_height="86dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/mybuttons"
        android:fontFamily="sans-serif"
        android:onClick="clickConvert"
        android:text="@string/convert"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amountField"
        tools:elevation="24dp" />

    <Spinner
        android:id="@+id/spinnerFrom"
        android:layout_width="150dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/mybuttons"
        android:gravity="center"
        android:popupBackground="@android:color/background_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:elevation="12dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:text="@string/fromcurr"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="80dp"
        android:layout_marginTop="50dp"
        android:text="@string/tocurr"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerTo"
        android:layout_width="150dp"
        android:layout_height="51dp"
        android:layout_marginEnd="28dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/mybuttons"
        android:gravity="center"
        android:popupBackground="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:elevation="12dp" />

    <EditText
        android:id="@+id/amountField"
        android:layout_width="294dp"
        android:layout_height="56dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerTo" />

    <TextView
        android:id="@+id/resultView"
        android:layout_width="268dp"
        android:layout_height="104dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertButton" />

    <Button
        android:id="@+id/button2"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_action_sett"
        android:onClick="showMenu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
